--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-youtube": "^10.1.0",
-    "firebase": "^12.5.0"
+    "firebase": "^12.5.0",
+    "vite": "^7.2.6",
+    "@vitejs/plugin-react": "^5.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
